--- a/_posts/thesis_chapters/2024-10-5-Design.md
+++ b/_posts/thesis_chapters/2024-10-5-Design.md
@@ -541,107 +541,83 @@ https://drive.google.com/drive/folders/1I8D_axlOUAFIGarrnzGV5mSCe2MDCDso -->
 
 **Link to discussion**
 
-This is an incomplete picture of the missions and drama process, for reason of space and focus of research questions, I have de-prioritised the detail of the role play element of the intervention of P3, an aspect that I will return to in the conclusion when outlining possible next steps of research.
+This is an incomplete picture of the missions and drama process, for reason of space and focus of research questions, I have de-prioritised the detail of the drama process element of the intervention of P3, an aspect that I will return to in the conclusion of this thesis when outlining possible next steps of research.
 
-The impact of social missions and playtesting are described in more detail in chapter 7.
+<!-- The impact of social missions and playtesting are described in more detail in chapter 7. -->
 
 ## Chapter Discussion
 
-This chapter has explored the complexity of the interacting tools and documentation in relation to their evolution in different phases of the formative intervention process. The contradictions explored have focusing on first technical and then more social dimensions of the learning design, a process which has surfaced some of the barriers to achieving computational fluency needed to complete the text coding of a multi-media project.
+This chapter has explored the complexity of the interacting tools and documentation in relation to their evolution in different phases of the formative intervention process. The contradictions explored have initially had a focused on technical and then more social dimensions of the learning design, a process which has surfaced some of the barriers to achieving computational fluency needed to complete the text coding of a multi-media project.
+HAS IT?
+REVISIT RESEARCH QUESTIONS
 
-The next section begins analyses the specifics of the designs features in relation to existing research, in particular UMC, half-baked games and  constructionist design principles.
-
-It synthesises the features of the design narrative, existing research and employs an argumentative grammar fusing elements of DBR and CHAT concepts: specifically iterative processes, analysis of emerging tensions between systems elements, focus on affordances and secondary stimuli (particularly in relation to participant agency), and the process of rising to the concrete through exploration of a germ cell concept.
-
-
-
-<!-- The next section begins by discussing how authentic tools and processes, while challenging for novices, can be addressed using existing of key design principles. -->
-
-<!-- IS THIS USEFUL HERE? LATER? NEXT CHAPTER?
-RQ2 addresses uses the term computational fluency, which as explored in chapter 2, is a better fit for the aims of this study than computational thinking, given the former's increased focus on agency and a more concrete, accessible approach.   -->
+The next section begins a synthesises the features of the design narrative, existing research, specifically UMC, half-baked approach and constructionist design principles. To do this it employs an argumentative grammar fusing elements of DBR and CHAT concepts: specifically iterative processes, analysis of emerging tensions between systems elements, focus on affordances and secondary stimuli (particularly in relation to participant agency), and the process of rising to the concrete through exploration of a germ cell concept.
 
 
+The emergent and mutual nature of this design process align with both DBR and CHAT principles. In this and the previous chapter I have described my active role to motivate and support an emerging community in iterative phases. I have designed, introduced and revised a technology based set of tools in a process aligned with broad definitions of DBR.  In addition to the affordances of technical tools, I have introduced learning activities as pedagogy strategies which can be seen as affordances, an approach also aligned with DBR research. The term affordances has been well explored in the literature of HCI from a CHAT perspective, as 'technology affordances as possibilities for human actions mediated by cultural means' [@kaptelinin_affordances_2012, p.927]. In 3GAT terminology, the affordances of my design would be terms as a series secondary stimuli. Sannino's work draws our attention to the intersection of the use of secondary stimuli by participants and volitional action or agency of participants.
 
-<!-- At some point in this process I realised that I wanted to encourage the growth of computational fluency.
-
-That was not clear, the use of computational thinking also jumped out from a sense of wanting to fit into the common frameworks of this area. But this approach had always seemed too abstract as a form of repertoire to me. More hands on specific repertoires to do with the logistics of more concrete tasks suited the high impact from minimal input approach, made particularly relevant given the difficulty of using a code environment. -->
-
- <!-- in line with wider conceptions of PBL and UDL.
-
-  - particpant voice and choice
-  - peer learning and ongoing sharing of process via product
-  - reduced class instructions
-  - avoiding stuckness
-  - linking to authentic practices and commuities
-
-While computational fluency is a valid of the objectives of the game making activity goal, this chapter has (re)surfaced the many barriers to achieving this via the text coding of a multi-media project. -->
-
-The emergent and mutual nature of this design process align with both DBR and CHAT principles. In this and the previous chapter I have described my active role to motivate and support an emerging community in iterative phases. I have designed, introduced and revised a technology based set of tools in a process aligned with broad definitions of DBR.  In addition to the affordances of technical tools, I have introduced learning activities as pedagogy strategies which can be seen as affordances, an approach also aligned with DBR research.
-
-DBR and affordances explored as networked affordances align with tools not only as technical or perceptual affordances but also mediation using concepts and more social practices or repertoires in CHAT [@barab_curriculum-based_2006].
-
-While the term affordances has been well explored in the literature of HCI from a CHAT perspective, in  3GAT terminology, the affordances of my design would be terms as a series secondary stimuli. Sannino's work draws our attention to the intersection of the use of secondary stimuli by participants and volitional action or agency of participants.
+<!-- DBR and affordances explored as networked affordances align with tools not only as technical or perceptual affordances but also mediation using concepts and more social practices or repertoires in CHAT [@barab_curriculum-based_2006]. -->
 
 The following chapters explore shifts to the overall structure of participant activity that can be said to align more closely with the concepts of relational agency supported by playtesting and social coding processes and transformative agency.
+SIGNPOSTING
 
 The evolution of these tools and practice affordances can at a foundational level as increasing instrumental agency by removing the need to understand concepts or use tools which were beyond the skill level of the participants. This more foundation level is explored in relation to other research in the following section.
-
-<!-- MOVE TO CH.7?
-Participants are able to leave the protective harbour by accessing more authentic documentation and moving beyond existing templates. The experience may be involve choppier waters but the tools and processes remain familiar. -->
+SIGNPOSTING
 
 
-<!-- This is a long-running theme of constructionist research, with roots in Papert concept of Microworlds, typically embodied by the Mathland environment, where participants control a robotic turtle with lines of simplified LOGO code language.  Because the turtle speaks only LOGO, children are drawn to speak LOGO to progress. Thus, Scratch and Mircoworlds can be seen as digital playgrounds with affordances that encourage certain types of play. -->
+**Comparing to UMC,  Microworlds & constructionist design priniciples**
 
 
-##### Comparing to Microworlds & constructionist design priniciples
-
-The meditational strategies, which emerged were not familiar to me before the start of this research, but after some research, exist in relevant research -
-e.g.  UMC literature, and half baked games, and constructionst design
-
-The process of modification of the starter template, foregrounding key affordances, together with the restricted tool choice of a code playground and pixel art editor with the authentic, yet scaffolded approach of both tools can be compared to the constructionism-informed design decisions made in creating a Microworld environment.
-
-MOVED INTEGRATE
-While much the focus of much constructionist research  is on the design of toolsets to facilitate to personal knowledge building and expression via open project work, more recent work from researchers in this school has started to embrace the value of situated, community driven production as a lens [@kafai_theory_2020].
+<!-- MOVED INTEGRATE
+While much the focus of much constructionist research  is on the design of toolsets to facilitate to personal knowledge building and expression via open project work, more recent work from researchers in this school has started to embrace the value of situated, community driven production as a lens [@kafai_theory_2020]. -->
+<!-- MOVED INTEGRATE
+The evolution of the starting template aligned with UMC approaches; constructionist design heuristics; and the concept of affordances understood from a socio-cultural perspective   -->
 
 
-MOVED INTEGRATE
-The evolution of the starting template aligned with UMC approaches; constructionist design heuristics; and the concept of affordances understood from a socio-cultural perspective as 'technology affordances as possibilities for human actions mediated by cultural means' [@kaptelinin_affordances_2012, p.927].  
+This chapter has described my responsive design process which provoked me to introduce strategies in P1, which I then identified in relevant research in D1 used to develop the design further in later stages. This process of praxis is present in the use of a starting half-baked game template where I draw on the of Kynigos et al [-@kynigos_children_2018] to focus on user feedback and motivation of incomplete game affordances,
+and in the application of research on UMC literature research in the careful design of stages of participant interaction with code via guiding documentation terms of quick start cards and a participatory creation of a menu of gameplay design patterns.
 
-Many of the design adaptations described in this chapter align with motivations of constructionist design principles explored in the Literature review [@resnick_design_2005]. Techniques or concepts which are embodied in both the Scratch software and the adaptations to the tool set of this intervention include:
+A more extensive set of design heuristics can be found in  constructionist research on design decisions made in creating a Microworld environment and the development of Scratch [@resnick_design_2005]. Techniques or concepts which are embodied in the tool set of this intervention also present in constructionism include: a simplified code authoring environment that provides live feedback of the results of code in a preview window, techniques to avoid and help correct code syntax errors via the use of the linting (see glossary) abilities of the code-playground and the technique to, and encouraging creative but scaffolded design via a GDP menu.
+MORE?
 
-- reducing barriers to entry through techniques to avoid code syntax errors
-- increasing engagement with a code authoring environment that provides live feedback of the results of code output
--  supporting immediacy of creative process by providing a library of assets.
-- The use of black boxes?
+A greater description of these element are explored in specific detail in the conclusion of Appendix.tech.
+
+<!-- -  supporting immediacy of creative process by providing a library of assets. -->
+
+
+Of particular relevant to the process of this design is the  constructionist design principles, choose black boxes carefully.  Resnick [@resnick_reflections_2005] explains the designing of black boxes as the process of as abstracting away areas potentially problematic areas of the production process, creating a kind of border between the participants experience with the protective environment of the scaffolded learning experience and a more open ecology of learning from code in the wild. Additionally, black boxes allow the learning designer to steer participants away from those that have been hidden and thus towards features affording the exploration of certain concepts, a process well illustrated Papert's focus on powerful mathematical ideas explored via Turtle control in LOGO.
+
+
+The use of black boxes is also common in professional coding practices in the use of a code libraries which abstract away complexities. In my design, The phaser game making library provides underlying code structures dealing with of aspects of gravity, and physics calculated required to handle collisions between objects, and I structured the code of the template to further simplify allowing participants to alter gravity settings of the game via simple change to one code variable.
+
+<!-- These game-specific aspects are more complex to implement. in the broader multi-media focused Scratch tool despite its . The choice of black boxes are different.    -->
+
+My design decision   to shield new users from the complexity of the underlying configuration of interrelated web-technologies and authentic tools and by abstracting away complexity and highlight design affordances that facilitate creative agency,
+However, the use of an authentic coding language in the form of javascript, and developer tool in glitch.com has not been simplified, thus  the barriers is more porous, like a  protective harbour still connected to the wilder sea.
 
 The careful choice of affordances by the microworld designer, to structure user experimentation, which Laurillard notes reduces dependence on instruction or direct facilitator input.
+DEVELOP THIS - DIAGRAM?
 
-Of particular relevant to the process of this design is the  constructionist design principles, choose black boxes carefully.  Resnick [@resnick_reflections_2005] explains the designing of black boxes as the process of as abstracting away areas potentially problematic areas of the production process. Black boxes allow the learning design to steer participants towards the exploration of certain concepts and away from those that have been hidden.
+Thus I propose this design as a form of Microworld, although one with much more porous boarders between this world and other more authentic coding ecosystems.
 
-The _black box_ design decisions of use of tools and documentation create a kind of border between the participants experience with the protective environment of the scaffolded learning experience and a more open ecology of learning from code in the wild; specifically via the use of authentic developer focused tools, processes and documentation. A significant drawback of using a bespoke tool for novices is that attempts to progress by stepping outside of that protective area risk culture shock and alienation from the newly unfamiliar environment.
+This is relevant to my design's focus on different dimensions of agency. I proposed that increased scaffolding of learner resources and tools can increase instrumental agency for novice coders but at the potential cost of reducing access to the tools and processes of authentic creative communities. Thus authentic and therefore complex Rather than a barrier to be designed away, this can be better understood as an inherent dialectical tension, which learning designers should take into account.
+
 
 <!-- **tsp**
 Additionally, the concept of task specific programming language within that process is relevant as affordances in my design are chosen not only to impact on the game, but also to build familiarity with code structures. -->
 
-**differences**
-There are however notable differences to a Microworld approach, primarily in the use of an authentic coding language in the form of javascript. Thus, the code language has not been simplified, other supporting resources guide the participant to more simple uses.
+**the potentially awesome impact of lifting the lid on authentic technologies**
 
-My design decision to build the toolset as structure on top of authentic tools and languages can be likened to creating a protective harbour to shield new users from the complexity of the underlying configuration of interrelated web-technologies and instead highlight design affordances that facilitate creative agency.
-
-Increased scaffolding of learner resources and tools can increase instrumental agency for novice coders but at the potential cost of reducing access to the tools and processes of authentic creative communities.
-
-#### The potentially awesome impact of lifting the lid on authentic technologies -
-
-One of the differences is in authenticity...
-
-Aligned with the general principles of PBL [@hung_engaged_2006], this design has strived for authenticity in varied forms. Authenticity in terms of activity object here is multiple in dimension, e.g in audience, in tool use and in creative processes. While the impact of the authentic dimensions of the tools and process described in this chapter 7 in depth, this section outlines some of the rationale of design descriptions in relation to existing research.
-
-
-Lifting the lid on hidden technologies and concepts in hands-on, exploratory processes can be empowering for participants. Ratto explores this via critical making [@ratto_critical_2011], a process which playfully surfaces Latour's [@weibel_making_2005; @latour_cautious_2008] concepts of shifting matters of fact to matters of concern by exposing taken for granted artefacts as objects that have been designed (for better or worse). Conversations between participants showing an inspirational or engaging impact on previously unknown technology. For examples, exchanges among participants that communicated a sense of awe of how much effort and coding must be involved in a professional game based on the relative complexity of the code of their simple game.    
+It is of value here to re-examining factors driving choice of an authentic choice of JavaScript code and the professional, open source library, specifically the potentially awesome impact of lifting the lid on authentic technologies a factor. Lifting the lid on hidden technologies and concepts in hands-on, exploratory processes can be empowering for participants. Ratto explores this via critical making [@ratto_critical_2011], a process which playfully surfaces Latour's [@weibel_making_2005; @latour_cautious_2008] concepts of shifting matters of fact to matters of concern by exposing taken for granted artefacts as objects that have been designed (for better or worse). Conversations between participants showing an inspirational or engaging impact on previously unknown technology. For examples, exchanges among participants that communicated a sense of awe of how much effort and coding must be involved in a professional game based on the relative complexity of the code of their simple game.    
 
     Pearl: It just shows you what goes into these games.
     Student Helper 3: Think about how much effort goes into.
     Pearl: You just take things for granted don’t you?
+
+Conversely, a significant drawback of using a bespoke tool for novices is that attempts to progress by stepping outside of that protective area risk culture shock and alienation from the newly unfamiliar environment.
+
+
+<!-- Aligned with the general principles of PBL [@hung_engaged_2006], this design has strived for authenticity in varied forms. Authenticity in terms of activity object here is multiple in dimension, e.g in audience, in tool use and in creative processes. While the impact of the authentic dimensions of the tools and process described in this chapter 7 in depth, this section outlines some of the rationale of design descriptions in relation to existing research. -->
 
 
 #### Synthesis effect of UMC + collection of GDPS
@@ -649,8 +625,6 @@ Lifting the lid on hidden technologies and concepts in hands-on, exploratory pro
 Small code changes resulted in potentially large changes in game behaviour, appearance and difficulty aligns with a long standing concept of HCI research that feedback is motivating for system users [@bernhaupt_introduction_2015; @malone_heuristics_1982].  The use of a starting template was inline with core motivations of UMC technique, namely, to build familiarity with the code structure, and confidence in use of tools in an accelerated way.
 
 As explored above, the shift in template design from P1 to P2 involved a more structured approach in for participants in use and modify stages where key affordances were highlighted in the code design.
-
-
 
 ####  what this synthesis has to say about participant  agency - OR MOVE UP?
 
@@ -851,3 +825,32 @@ https://web.archive.org/web/20180426051205/http://phaser.io/tutorials/making-you
  After this shared first change, participants next choices varied greatly. While some participants engaged with extensive experimentation to find a player movement feel that seemed just right, others,  were much less concerned with this aspect of game play, despite sometime frustrating resulting player movement.
 
  Data explored in the next chapter supports foundational claims of constructionist computing and UMC advocates  that greater user choice over the design process contributes to participant motivational and a feeling ownership of their projects [@lytle_use_2019; @peppler_computer_2009]
+
+
+#### Dropped from Discussion
+
+<!-- This is a long-running theme of constructionist research, with roots in Papert concept of Microworlds, typically embodied by the Mathland environment, where participants control a robotic turtle with lines of simplified LOGO code language.  Because the turtle speaks only LOGO, children are drawn to speak LOGO to progress. Thus, Scratch and Mircoworlds can be seen as digital playgrounds with affordances that encourage certain types of play. -->
+
+<!-- The next section begins by discussing how authentic tools and processes, while challenging for novices, can be addressed using existing of key design principles. -->
+
+<!-- IS THIS USEFUL HERE? LATER? NEXT CHAPTER?
+RQ2 addresses uses the term computational fluency, which as explored in chapter 2, is a better fit for the aims of this study than computational thinking, given the former's increased focus on agency and a more concrete, accessible approach.   -->
+
+
+
+<!-- At some point in this process I realised that I wanted to encourage the growth of computational fluency.
+
+That was not clear, the use of computational thinking also jumped out from a sense of wanting to fit into the common frameworks of this area. But this approach had always seemed too abstract as a form of repertoire to me. More hands on specific repertoires to do with the logistics of more concrete tasks suited the high impact from minimal input approach, made particularly relevant given the difficulty of using a code environment. -->
+
+ <!-- in line with wider conceptions of PBL and UDL.
+
+  - particpant voice and choice
+  - peer learning and ongoing sharing of process via product
+  - reduced class instructions
+  - avoiding stuckness
+  - linking to authentic practices and commuities
+
+While computational fluency is a valid of the objectives of the game making activity goal, this chapter has (re)surfaced the many barriers to achieving this via the text coding of a multi-media project. -->
+
+<!-- MOVE TO CH.7?
+Participants are able to leave the protective harbour by accessing more authentic documentation and moving beyond existing templates. The experience may be involve choppier waters but the tools and processes remain familiar. -->
