--- a/_posts/thesis_chapters/2024-10-5-Design.md
+++ b/_posts/thesis_chapters/2024-10-5-Design.md
@@ -575,7 +575,15 @@ The evolution of the starting template aligned with UMC approaches; construction
 
 
 This chapter has described my responsive design process which provoked me to introduce strategies in P1, which I then identified in relevant research in D1 used to develop the design further in later stages. This process of praxis is present in the use of a starting half-baked game template where I draw on the of Kynigos et al [-@kynigos_children_2018] to focus on user feedback and motivation of incomplete game affordances,
-and in the application of research on UMC literature research in the careful design of stages of participant interaction with code via guiding documentation terms of quick start cards and a participatory creation of a menu of gameplay design patterns.
+and in the application of research on UMC literature research in:
+-  the use of a working template build familiarity with the code structure and use of tools in an accelerated way.
+- a  structured approach in for participants in use and modify stages where key affordances were highlighted in the code design.
+-  the careful design of stages of participant interaction with code via guiding documentation terms of quick start cards and a participatory creation of a menu of gameplay design patterns.
+
+
+
+INTEGRATE  
+Small code changes resulted in potentially large changes in game behaviour, appearance and difficulty aligns with a long standing concept of HCI research that feedback is motivating for system users [@bernhaupt_introduction_2015; @malone_heuristics_1982].  
 
 A more extensive set of design heuristics can be found in  constructionist research on design decisions made in creating a Microworld environment and the development of Scratch [@resnick_design_2005]. Techniques or concepts which are embodied in the tool set of this intervention also present in constructionism include: a simplified code authoring environment that provides live feedback of the results of code in a preview window, techniques to avoid and help correct code syntax errors via the use of the linting (see glossary) abilities of the code-playground and the technique to, and encouraging creative but scaffolded design via a GDP menu.
 MORE?
@@ -620,25 +628,6 @@ Conversely, a significant drawback of using a bespoke tool for novices is that a
 <!-- Aligned with the general principles of PBL [@hung_engaged_2006], this design has strived for authenticity in varied forms. Authenticity in terms of activity object here is multiple in dimension, e.g in audience, in tool use and in creative processes. While the impact of the authentic dimensions of the tools and process described in this chapter 7 in depth, this section outlines some of the rationale of design descriptions in relation to existing research. -->
 
 
-#### Synthesis effect of UMC + collection of GDPS
-
-Small code changes resulted in potentially large changes in game behaviour, appearance and difficulty aligns with a long standing concept of HCI research that feedback is motivating for system users [@bernhaupt_introduction_2015; @malone_heuristics_1982].  The use of a starting template was inline with core motivations of UMC technique, namely, to build familiarity with the code structure, and confidence in use of tools in an accelerated way.
-
-As explored above, the shift in template design from P1 to P2 involved a more structured approach in for participants in use and modify stages where key affordances were highlighted in the code design.
-
-####  what this synthesis has to say about participant  agency - OR MOVE UP?
-
-And this has a knock on effect on the increase use of social coding processes, as the increased instrumental agency can be seen as the base of a triangular hierarchy of agency. One level may  needs to be built on the other.
-
-MOVE THOSE OBSERVATIONS HERE.
-<!-- LATER? My choices balanced the value of positive engagement of asset creating, development of digital literacy skills associated with web production, and a focus on promoting code modification.   -->
-
-Agency in this learning process was present via the input of participants in the changing design of the program. At times through direct requests, at times through my responses to behaviours demonstrating their needs and motivations.
-
-Playtesting as a process and the use of GDPs in varied ways by participants was noticed and I added more affordences designed to facilitate these aspects. Affordances here as a form of delegated agency.
-
-Chapter 7 explores the delivery and start to explore the impact of the and emerging community processes on cultural dimensions of the game making activity on participants development of agency.
-
 ### Rising to the concrete - the emergence of GDPs as a germ cell of activity
 
 The process of rising to the concrete via a germ cell concept,  while not seen as a requirement for formative interventions [Sannino etc], it is seen as powerful in potential. To seek it, the researcher engages in an exploration of complex, messy concrete processes is undertaken over time to try to discern overarching concerns which can be expressed as a prototypical abstract germ cell concept.
@@ -667,9 +656,6 @@ The data gathered showed that while many were at a level of making changes to pe
 
 **Comparing to Stepwise approaches**
 
-
-
-
 OPEN THE DOOR HERE - AND POINT TO THE NEXT CHAPTER RATHER THAN TACKLING IT ALL.
 
 
@@ -677,9 +663,25 @@ OPEN THE DOOR HERE - AND POINT TO THE NEXT CHAPTER RATHER THAN TACKLING IT ALL.
 While the scope of this study is not on the micro-level of tool use, it is useful to collate some broad observations from my journal notes and video data on how participants used the new tools introduced. This is done in relation dimensions of complexity exposed in research on educational coding tools. -->
 
 
+### Summary and link to next chapter/s
 
 
-### Link to next chapter/s
+#### Synthesis effect of UMC + collection of GDPS
+
+The use of  design decisions aligned with the principles above had a knock on effect on the increase use of social coding processes.
+
+I prose in particular that the use of a template and a collection of GDPs via a guided approaches had an accelerated effect on a specific set of coding fluency practices.
+
+This instrumental proficiency was required before the rich set of  interaction based on peer learning, and other social coding processed could emerge in playtesting practices.
+
+Thus instrumental agency can be seen as the base of a triangular hierarchy of agency  One level may  needs to be built on the other.
+
+<!-- LATER? My choices balanced the value of positive engagement of asset creating, development of digital literacy skills associated with web production, and a focus on promoting code modification.   -->
+
+Agency in this learning process was present via the input of participants in the changing design of the program. At times through direct requests, at times through my responses to behaviours demonstrating their needs and motivations. Playtesting as a process and the use of GDPs in varied ways by participants was noticed and I added more affordances designed to facilitate these aspects. Affordances here as a form of delegated agency.
+
+Chapter 7 explores the delivery and start to explore the impact of the and emerging community processes on cultural dimensions of the game making activity on participants development of agency.
+
 
 This chapter has dealt with the evolution of design in initial phases and responses to learner experience to resolve tensions. A key focus of this chapter has been  barriers to computer coding and use of particular software. I have explored alignment with the results research from the constructionist school.
 
@@ -692,11 +694,6 @@ One of my central proposals regarding the methodology of this thesis is that whi
 
 
 The next chapter explores the varied uses of a gameplay design patterns. In this study the patterns take the form of working with common game elements game design patterns.
-
-
-
-
-
 
 
 
